quartz/styles/custom.scss
@use "./variables.scss" as *;

// variables in util/theme.ts

@font-face {
  font-family: "Mononoki";
  src: url("static/fonts/mononoki/MononokiNerdFontMono-Regular.ttf") format("woff2");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Mononoki";
  src: url("static/fonts/mononoki/MononokiNerdFontMono-Bold.ttf") format("woff2");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Noto Sans Mono";
  src: url("static/fonts/noto_sans_mono/NotoSansMono-Regular.ttf") format("woff2");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Noto Sans Mono";
  src: url("static/fonts/noto_sans_mono/NotoSansMono-Bold.ttf") format("woff2");
  font-weight: 700;
  font-style: normal;
}

:root {
  --titleFont:  "Mononoki", monospace;
  --bodyFont: "Noto Sans Mono", monospace;
  --headerFont: "Mononoki", monospace;
  --codeFont: "Mononoki", monospace;
  --font-text: "Noto Sans Mono", monospace;
  --font-interface: "Noto Sans Mono", sans-serif;
  --font-monospace: "Noto Sans Mono", monospace;

  --transition: background-color 0.15s linear, color 0.15s linear, border-color 0.15s linear;
}

h1, h2, h3, h4, h5, h6 {
    font-family: var(--titleFont) !important;
}

::selection {
  background-color: #81a1c1;
  color: #222630;
}

html {
  font-size: 15px;
}

body, .center, code {
  transition: var(--transition);
}

body {
  background:
    linear-gradient(
    90deg,
    var(--light) 0%,
    transparent 50%,
    var(--light) 100%
    ),

    linear-gradient(var(--highlight) 1px, transparent 1px),
    linear-gradient(90deg, var(--highlight) 1px, transparent 1px)

    var(--light);

  background-size: auto, 50px 50px, 50px 50px;

  background-attachment: fixed;
}

ul::-webkit-scrollbar {
  display: none;
  width: 4px;
}
ul::-webkit-scrollbar-track {
  background: transparent;
}
ul::-webkit-scrollbar-thumb {
  background: var(--lightgray);
  border-radius: 5px;
}
ul::-webkit-scrollbar-thumb:hover {
  background: var(--gray);
}
ul:hover::-webkit-scrollbar {
  display: block;
}

.center {
  padding: 20px;
  margin: 0;
  margin-top: 15px;

  border-radius: 10px;

  background-color: var(--darker);
  box-shadow: 0px 0px 19px 1px var(--shadow);

  @media all and ($desktop) {
    margin-top: 70px;
  }
}

li:hover >a{
  color: var(--tertiary);
  opacity: 1;
}

a {
  font-family: var(--headerFont);
}

.toc {
  margin-right: 15px;
}

.toc-content >li >a {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.internal {
  background-color: transparent;
}

pre {
  border: none;
}

code {
  background-color: var(--lightgray);
  border: 1px, solid, var(--gray);
  transition: border-color 0.2 ease;
  font-size: .85rem;
}

.search>.search-button {
  transition: border-color 0.2s ease;
}

.graph h3{
  display: none;
}

.graph-container {
  display: none;
}

.graph-outer {
  border: none;
  height: fit-content;
}

.graph>.graph-outer>.global-graph-icon {
  cursor: pointer;
  color: var(--dark-gray);
  opacity: 1;
  background: 0 0;
  border: none;
  width: 24px;
  height: 24px;
  margin: 0;
  padding: .1rem;
  transition: background-color .5s;
  position: relative;
}

.section-li {
  border-bottom: solid 1px var(--highlight);
  padding-bottom: 1em;
  margin-bottom: 1.5em;
}
.section-li>.section {
  grid-template-columns: fit-content(9em) 1fr;
}
.tags{
  grid-column: 1 / -1;
  margin-top: 7px;
}
.tags>li {
  display: inline-block;
  margin-right: 15px;
}

.folder-container div>a{
  font-size: 1rem;
}

.page-header {
  margin-top: 0px;
}

footer {
  opacity: .9;
  align-content: center;
  justify-items: center;
  margin: 2rem 0 4rem;
  display: grid;
  grid-template-rows: 30px 30px;
  align-items: center;
}

footer ul {
  list-style: none;
  display: flex;
  flex-direction: row;
  padding-inline-start: 0;
  gap: 1rem;
}


.page>#quartz-body {
  justify-items: center;
  gap: 25px;

  @media all and ($tablet) {
    margin-top: 45px;
  }
}

.toc, .backlinks {
  @media all and ($tablet) {
    display: none;
  }
}

.sidebar {
  @media all and ($desktop){
    width: 100% !important;
    padding: 6rem 3rem 2rem !important;
  }

  @media all and ($mobile) {
    position: relative;
    background-color: transparent;
  }
}

.center {
  @media all and ($mobile) {
    margin-top: 10px;
    background-color: transparent;
    box-shadow: none;
    padding: 0;
  }
}

